[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/controls/blueprint_panel.gd" type="Script" id=1]

[node name="BlueprintPanel" type="Panel"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.411765, 0.313726, 0.313726, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Blueprint_position" type="Control" parent="CenterContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_BlueprintPanel_mouse_entered" binds= [ true ]]
[connection signal="mouse_exited" from="." to="." method="_on_BlueprintPanel_mouse_entered" binds= [ false ]]
